[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/LobbyFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/Lobby.gd" type="Script" id=2]

[node name="Lobby" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUI" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHost" type="Button" parent="MainUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -86.0
margin_right = 100.0
margin_bottom = -36.0
custom_fonts/font = ExtResource( 1 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="MainUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -25.0
margin_right = 100.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIPAddress" type="LineEdit" parent="MainUI"]
anchor_right = 1.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Enter ip address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAddress" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -76.0
custom_fonts/font = ExtResource( 1 )
text = "dfasdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MainUI/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="MainUI/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
